plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'org.beryx.jlink' version '2.25.0'
}

group 'org'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.10.0'
}

sourceCompatibility = '19'
targetCompatibility = '19'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainModule = 'org.ulearnstatistic'
  mainClass = 'org.ulearnstatistic.HelloApplication'
}

javafx {
  version = '19.0.2'
  modules = ['javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing' ]
}

dependencies {
  implementation('org.controlsfx:controlsfx:11.1.2')
  implementation('com.dlsc.formsfx:formsfx-core:11.6.0') {
    exclude(group: 'org.openjfx')
  }
  implementation('net.synedra:validatorfx:0.4.0') {
    exclude(group: 'org.openjfx')
  }
  implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1')
  implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
  implementation('eu.hansolo:tilesfx:11.48') {
    exclude(group: 'org.openjfx')
  }

  implementation("org.apache.commons:commons-lang3:3.6")
  implementation("org.apache.commons:commons-collections4:4.3")
  implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.47.1.0'

  implementation("com.opencsv:opencsv:5.9")
  implementation("com.vk.api:sdk:1.0.16")
  implementation("org.apache.logging.log4j:log4j-slf4j-impl:2.11.2")
  implementation("org.apache.logging.log4j:log4j-api:2.11.2")
  implementation("org.apache.logging.log4j:log4j-core:2.11.2")
  implementation("org.apache.httpcomponents:httpclient:4.5.8")
  implementation("commons-io:commons-io:2.6")
  implementation("com.google.code.gson:gson:2.8.5")
  implementation("org.slf4j:slf4j-api:1.7.26")

  testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
useJUnitPlatform()}

jlink {
  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
  launcher {
    name = 'app'
  }
}

jlinkZip {
  group = 'distribution'
}